--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "scripts": {
     "build": "./node_modules/.bin/babel src.js -o index.js",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test": "parcel build test/app.js -d test/public"
   },
   "author": "Nicolay Hvidsten",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "parcel-bundler": "^1.6.2"
   },
   "dependencies": {
     "baconjs": "^0.7.91",
-    "jquery": "^3.1.1"
+    "jquery-min": "0.0.2"
   }
 }
