--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "baquery",
-  "version": "0.0.4",
-  "description": "Extends the default jQuery object with Bacon.js functionality",
+  "version": "0.0.5",
+  "description":
+    "Extends the default jQuery object with Bacon.js functionality",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -20,7 +21,7 @@
     "parcel-bundler": "^1.6.2"
   },
   "dependencies": {
-    "baconjs": "^0.7.91",
+    "baconjs": "^2.0.5",
     "jquery-min": "0.0.2"
   }
 }
